# cpp-chw1

./: CMakeLists.txt  README.md  algorithms.h  checker.cpp  checker.h  main.cpp  makegraph.py  opcountalgs.h  randoms.md
algorithms/: binaryInsertionSort.cpp  bubbleSort.cpp  bubbleSortI1.cpp  bubbleSortI2.cpp  insertionSort.cpp  mergeSort.cpp  pyramideSort.cpp  quickSort.cpp  radixSort.cpp  selectionSort.cpp  shellSortCr.cpp  shellSortSh.cpp  stableCountingSort.cpp
arrays/: 300-0-4000.txt  300-0-5.txt  300-almost-sorted.txt  300-reversed.txt  4100-0-4000.txt  4100-0-5.txt  4100-almost-sorted.txt  4100-reversed.txt
opcountalgs/: binaryInsertionSort.cpp  bubbleSort.cpp  bubbleSortI1.cpp  bubbleSortI2.cpp  insertionSort.cpp  mergeSort.cpp  pyramideSort.cpp  quickSort.cpp  radixSort.cpp  selectionSort.cpp  shellSortCr.cpp  shellSortSh.cpp  stableCountingSort.cpp
results/: opcount300.csv  opcount4100.csv  time300.csv  time4100.csv
results/binaryInsertionSort/: conclusion.md
results/bubbleSort/: conclusion.md
results/bubbleSortI1/: conclusion.md
results/bubbleSortI2/: conclusion.md
results/insertionSort/: conclusion.md
results/mergeSort/: conclusion.md
results/pyramideSort/: coclusion.md
